css almost done
nav 바 빼고 css 완료했지만 root 조정해야함

--- a/3. BALENCIAGA/css/style.css
+++ b/3. BALENCIAGA/css/style.css
@@ -28,6 +28,7 @@
 a {
   text-decoration: none;
   color: inherit;
+  display: block;
 }
 ul {
   list-style: none;
@@ -35,11 +36,18 @@ ul {
 img {
   max-width: 100%;
 }
+button {
+  border-style: none;
+}
+input {
+  border-style: none;
+}
 /* common */
 .flex-center {
   display: flex;
   justify-content: center;
   align-items: center;
+  text-align: center;
 }
 .flex {
   display: flex;
@@ -48,11 +56,25 @@ i {
   font-size: 2rem;
   vertical-align: baseline;
 }
+.li-box-style {
+  border: 1px solid var(--line-color);
+  border-radius: 10px;
+}
 /* layout */
 .main-inner {
   width: 1100px;
   margin: 0 auto;
+  padding: 60px 0;
+}
+.footer-inner {
+  width: 900px;
+  margin: 0 auto;
   padding: 50px 0;
+}
+footer {
+  background: var(--primary-color);
+  color: var(--secondary-color);
+  margin-top: 30px;
 }
 
 /* header */
@@ -175,12 +197,167 @@ i {
   flex-direction: column;
   text-align: center;
   transition: 0.5s;
-  border: 1px solid #999;
-  border-radius: 1rem;
 }
 .community__desc_text h1 {
   margin-bottom: 50px;
 }
 .community__desc_text:hover {
   transform: translateY(-10px);
+}
+
+/* section second banner */
+.second__banner img {
+  width: 100%;
+}
+
+/* section category */
+.category ul {
+  justify-content: space-between;
+  text-align: center;
+}
+.category ul li {
+  position: relative;
+  cursor: pointer;
+}
+.category ul li a {
+  text-align: center;
+}
+.category ul li img {
+  transition: all 0.4s;
+  margin-bottom: 30px;
+  width: 300px;
+  border-radius: 1rem;
+}
+.category ul li h2 {
+  font-size: 1.3rem;
+  position: absolute;
+  top: 10%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  width: 50%;
+  display: none;
+}
+.category ul li:after {
+  content: "";
+  position: absolute;
+  border-radius: 1rem;
+  width: 300px;
+  height: 300px;
+  background: rgba(145, 145, 145, 0.288);
+  top: 0;
+  left: 0;
+  opacity: 0;
+  transition: 0.5s;
+}
+.category ul li:hover:after {
+  opacity: 1;
+}
+.category ul li:hover h2 {
+  display: block;
+}
+
+/* section recommend */
+.recommend ul {
+  justify-content: space-between;
+}
+.recommend ul li {
+  width: 300px;
+  flex-direction: column;
+  justify-content: space-between;
+  text-align: center;
+  padding: 15px;
+}
+.recommend__img {
+  transition: 0.3s;
+  cursor: pointer;
+}
+.recommend__img:hover {
+  transform: scale(1.1);
+}
+.recommend ul li span {
+  font-size: 1.3rem;
+  /* display: inline; */
+  background: var(--primary-color);
+  color: var(--secondary-color);
+}
+.recommend ul li p {
+  font-size: 1.2rem;
+}
+.recommend__desc {
+  background: var(--primary-color);
+  color: var(--secondary-color);
+}
+.recommend__desc b:nth-of-type(1) {
+  font-size: 1.2rem;
+}
+.recommend__desc b:nth-of-type(2) {
+  font-size: 1.2rem;
+  text-decoration: underline;
+}
+
+/* section sub-banner */
+.sub__banner img {
+  width: 100%;
+  margin: 30px 0;
+}
+
+/* section online-service */
+.online-service ul {
+  justify-content: space-around;
+}
+.online-service ul li {
+  display: flex;
+  flex-direction: column;
+  justify-content: space-around;
+  width: 200px;
+  padding: 10px;
+  height: 300px;
+}
+.online-service ul li p {
+  text-align: left;
+}
+/* footer */
+footer ul li {
+  flex: 1;
+}
+.main-logo-white {
+  width: 300px;
+  position: relative;
+}
+.footer__content:after {
+  content: "";
+  position: absolute;
+  width: 0.2px;
+  height: 200px;
+  background: #fff;
+}
+.footer__item {
+  justify-content: space-around;
+}
+.footer__service_center h2 {
+  margin-bottom: 20px;
+}
+.footer__service_center ul li {
+  /* border: 1px solid var(--secondary-color); */
+  margin-bottom: 0.8rem;
+  padding: 5px;
+}
+.footer__custom_service {
+  height: 150px;
+  flex-direction: column;
+  justify-content: space-between;
+  /* border: 1px solid #fff; */
+}
+.footer__h2_margin {
+  margin-bottom: var(--margin-1);
+}
+.footer__news button {
+  margin-left: -5px;
+  height: 18px;
+  font-size: 0.5rem;
+  vertical-align: top;
+}
+.footer__icon_items {
+  display: flex;
+  justify-content: space-between;
 }
