--- a/3. BALENCIAGA/css/style.css
+++ b/3. BALENCIAGA/css/style.css
@@ -246,11 +246,15 @@ footer {
   background: rgba(145, 145, 145, 0.288);
   top: 0;
   left: 0;
-  opacity: 0;
+  /* opacity: 0; */
+  /* visibility: hidden; */
+  display: none;
   transition: 0.5s;
 }
 .category ul li:hover:after {
-  opacity: 1;
+  /* opacity: 1; */
+  /* visibility: visible; */
+  display: block;
 }
 .category ul li:hover h2 {
   display: block;
