--- a/1. Daegu-marathon/css/style.css
+++ b/1. Daegu-marathon/css/style.css
@@ -143,28 +143,42 @@ button {
     max-width: 100%;
     height: 5rem;
     padding: 0 2rem;
-    /* margin: 0 auto; */
     align-items: center;
     justify-content: space-between;
     color: var(--white-color);
 }
 .nav__container {
+    /* position: absolute; */
     margin-left: auto;
 }
 .nav__list {
     width: 500px;
     justify-content: space-between;
 }
-.nav__item:hover,
-.nav__item.actice
+.nav__item a {
+    /* background: coral; */
+    width: 100%;
+    /* height: 150px; */
+    text-align: center;
+    line-height: 50px;
+}
+/* .nav__item:hover,
+.nav__item.active
 {
     color: var(--primary-color);
+} */
+.nav__submenu {
+    position: absolute;
+    top: 100%;
+    width: 100%;
+    display: flex;
+    background: skyblue;
 }
-
 
 /* ========================= home ========================= */
 .home {
-    background: url(../img/main-banner1.jpg);
+    /* background: coral; */
+    background: url(../img/main-banner1.jpg) no-repeat;
     width: 100%;
     height: 100vh;
 }
