adding css: main-banner

--- a/1. Daegu-marathon/css/style.css
+++ b/1. Daegu-marathon/css/style.css
@@ -24,7 +24,8 @@
     --body-color: hsl(var(--hue-color), 60%, 99%);
 
 /* ----------------------- typography ----------------------- */
-    --body-font: 'Poppins', sans-serif;
+/* font-family: ; */
+    --body-font: 'Do Hyeon', sans-serif;
     --big-font-size: 3rem;
     --h1-font-size: 2.25rem;
     --h2-font-size: 1.5rem;
@@ -69,6 +70,7 @@ body {
     font-size: var(--normal-font-size);
     background-color: var(--body-color);
     color: var(--gray-color);
+
 }
 h1,h2,h3,h4 {
     color: var(--black-color);
@@ -137,7 +139,7 @@ button {
     width: 100%;
     z-index: var(--z-fixed);
     border-bottom: 1px solid var(--white-color);
-    /* background: url(../img/main-banner1.jpg); */
+    font-size: var(--h3-font-size);
 }
 .header-inner {
     max-width: 100%;
@@ -156,29 +158,55 @@ button {
     justify-content: space-between;
 }
 .nav__item a {
-    /* background: coral; */
     width: 100%;
-    /* height: 150px; */
     text-align: center;
     line-height: 50px;
 }
-/* .nav__item:hover,
+.nav__item:hover,
 .nav__item.active
 {
     color: var(--primary-color);
-} */
+}
 .nav__submenu {
     position: absolute;
     top: 100%;
+    left: 0;
     width: 100%;
     display: flex;
-    background: skyblue;
+    font-size: var(--font-medium);
+    font-weight: var(--font-semi-bold);
+    background: var(--primary-color-lighter);
 }
 
-/* ========================= home ========================= */
-.home {
-    /* background: coral; */
-    background: url(../img/main-banner1.jpg) no-repeat;
+/* ========================= banner ========================= */
+.banner {
+    background: url(../img/main-banner1.jpg) center/100% no-repeat;
     width: 100%;
     height: 100vh;
+    position: relative;
+}
+/* ========================= home ========================= */
+.home {
+    color: var(--white-color);
+}
+.home__container {
+    background: coral;
+    position: absolute;
+    top: 50%;
+    transform: translateY(-20%);
+    margin: var(--mb-1);
+    font-size: var(--big-font-size);
+    font-weight: var(--font-medium);
+    width: 50%;
+}
+.home__container_desc {
+    margin-bottom: var(--mb-1);
+    color: var(--white-color);
+}
+.home__container_date {
+    color: var(--white-color);
+    background: var(--primary-color-lighter);
+    border-radius: var(--mb-0-5);
+    width: 50%;
+    text-align: center;
 }
