--- a/1. Daegu-marathon/css/style.css
+++ b/1. Daegu-marathon/css/style.css
@@ -12,7 +12,7 @@
     saturation(채도) : 0 ~ 100 (0: 회색, 100: 원색)
     lightness(명도) : 0 ~ 100 (0: 검정색, 50: 중간, 100: 흰색)
 */
-    --hue-color: 200;
+    --hue-color: 205;
 
 /* ----------------------- colors ----------------------- */
     --primary-color: hsl(var(--hue-color), 69%, 61%);
@@ -112,60 +112,80 @@ button {
     color: var(--gray-color);
     margin-bottom: var(--mb-3);
 }
-.button {
+/* .button {
     display: inline-block;
     background-color: var(--primary-color);
     color: #fff;
     padding: 1rem;
     border-radius: .5rem;
     font-weight: var(--font-medium);
-}
+} */
 
 /* ========================= layout ========================= */
 .inner {
     min-width: 340px;
     max-width: 768px;
     margin: 0 auto;
-    padding: 2rem 0 4rem;
+    padding: 3rem 0 5rem;
 }
 .flex {
     display: flex;
 }
 
 /* ========================= header ========================= */
-.header {
+#header {
     position: fixed;
     left: 0;
+    top: 0;
     width: 100%;
     z-index: var(--z-fixed);
     border-bottom: 1px solid var(--white-color);
     font-size: var(--h3-font-size);
+    transition: .4s;
+}
+#header.fixed {
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    color: #000;
+    background: var(--primary-color);
+    border: none;
+}
+.nav__item > a.fixed {
+    color: var(--black-color);
 }
 .header-inner {
     max-width: 100%;
-    height: 5rem;
+    height: 4rem;
     padding: 0 2rem;
     align-items: center;
     justify-content: space-between;
-    color: var(--white-color);
 }
 .nav__container {
-    /* position: absolute; */
     margin-left: auto;
 }
 .nav__list {
     width: 500px;
     justify-content: space-between;
 }
+.nav__link {
+    color: var(--white-color);
+}
 .nav__item a {
     width: 100%;
     text-align: center;
     line-height: 50px;
+    transition: .4s;
 }
-.nav__item:hover,
-.nav__item.active
-{
+.nav__item > a {
+    color: var(--white-color);
+}
+.nav__item a:hover{
     color: var(--primary-color);
+}
+.nav__item a:hover.active {
+    color: var(--white-color);
 }
 .nav__submenu {
     position: absolute;
@@ -174,27 +194,27 @@ button {
     width: 100%;
     display: flex;
     font-size: var(--font-medium);
-    font-weight: var(--font-semi-bold);
+    /* font-weight: var(--font-semi-bold); */
     background: var(--primary-color-lighter);
 }
 
 /* ========================= banner ========================= */
 .banner {
-    background: url(../img/main-banner1.jpg) center/100% no-repeat;
+    background: url(../img/main-banner.jpg) center/100% no-repeat;
     width: 100%;
     height: 100vh;
     position: relative;
 }
 /* ========================= home ========================= */
 .home {
+    /* margin-top: var(--mb-2); */
     color: var(--white-color);
 }
 .home__container {
-    background: coral;
     position: absolute;
     top: 50%;
     transform: translateY(-20%);
-    margin: var(--mb-1);
+    margin: var(--mb-2);
     font-size: var(--big-font-size);
     font-weight: var(--font-medium);
     width: 50%;
@@ -209,4 +229,71 @@ button {
     border-radius: var(--mb-0-5);
     width: 50%;
     text-align: center;
+}
+/* ========================= apply box ========================= */
+.apply {
+    justify-content: space-between;
+}
+.apply__box {
+    margin: var(--mb-2-5);
+    position: relative;
+    overflow: hidden;
+}
+.apply__img {
+    transition: .4s;
+}
+.apply__box:hover .apply__img {
+    transform: scale(1.2);
+}
+.apply__desc {
+    text-align: center;
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    width: 100%;
+    color: var(--white-color);
+
+}
+.apply__desc p {
+    font-size: var(--big-font-size);
+    margin-bottom: var(--mb-2);
+}
+.apply__desc a {
+    font-size: var(--h3-font-size);
+    border: 1px solid var(--white-color);
+    padding: var(--mb-0-5);
+    transition: .4s;
+}
+.apply__desc a:hover {
+    background: var(--white-color);
+    color: var(--black-color);
+    border: none;
+}
+.apply__semi_blue {
+    color: var(--primary-color-lighter);
+}
+.apply__semi_blue a {
+    border: 1px solid var(--primary-color-lighter);
+}
+.apply__semi_blue a:hover {
+    border: none;
+    color: var(--white-color);
+    background: var(--primary-color-lighter);
+}
+
+
+
+/* ========================= footer ========================= */
+.footer {
+    border-top: 1px solid var(--gray-color);
+    padding: var(--mb-1-5) var(--mb-3);
+    font-family: sans-serif;
+    font-size: var(--small-font-size);
+}
+address {
+    font-style: unset;
+}
+address a {
+    text-decoration: underline;
 }
