--- a/3. BALENCIAGA/css/style.css
+++ b/3. BALENCIAGA/css/style.css
@@ -329,6 +329,7 @@ footer ul li {
 .main-logo-white {
   width: 300px;
   position: relative;
+  margin-bottom: var(--margin-1);
 }
 .footer__content:after {
   content: "";
@@ -344,24 +345,45 @@ footer ul li {
   margin-bottom: 20px;
 }
 .footer__service_center ul li {
-  /* border: 1px solid var(--secondary-color); */
   margin-bottom: 0.8rem;
   padding: 5px;
+  font-weight: bold;
+  transition: .3s;
+}
+.footer__service_center ul li:hover {
+  background: var(--secondary-color);
+  color: var(--primary-color);
+}
+.footer__news input {
+  height: 30px;
 }
 .footer__custom_service {
-  height: 150px;
   flex-direction: column;
   justify-content: space-between;
 }
 .footer__h2_margin {
-  margin-bottom: var(--margin-1);
+  margin: var(--margin-1) 0;
 }
 .footer__news button {
   margin-left: -5px;
-  height: 18px;
-  font-size: 0.5rem;
+  height: 30px;
+  font-size: 0.8rem;
+  vertical-align: bottom;
 }
 .footer__icon_items {
   display: flex;
   justify-content: space-between;
+}
+.footer__icon_items a {
+  transition: .3s;
+  
+}
+.footer__icon_items a:nth-child(1):hover {
+  color: #1877F2;
+}
+.footer__icon_items a:nth-child(2):hover {
+  color: #1da1f2;
+}
+.footer__icon_items a:nth-child(3):hover {
+  color: #c32aa3;
 }
