--- a/2. SNUH/css/style.css
+++ b/2. SNUH/css/style.css
@@ -1,5 +1,31 @@
 @charset "utf-8";
-/* layout */
+/* =================== reset, base =================== */
+* {
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+}
+body {
+    font-weight: 400; /* Regular(400), Bold(700), Extra Bold(800), Light(300) */
+    line-height: 1.4;
+    color: #666666;
+    background: #fff;
+}
+b, strong {
+    font-weight: 700;
+}
+h1, h2, h3, h4, h5, h6 {
+    font-size: 1em;
+}
+ul, ol {
+    list-style: none;
+}
+a {
+    color: inherit;
+    text-decoration: none;
+    display: block;
+}
+/* =================== layout =================== */
 .inner {
     position: relative;
     width: 1120px;
