balenciaga style change

--- a/3. BALENCIAGA/css/style.css
+++ b/3. BALENCIAGA/css/style.css
@@ -98,7 +98,7 @@ footer {
   justify-content: space-between;
   margin: 0 auto;
 }
-.navbar__item a {
+.navbar__item > a {
   z-index: 500;
   height: 50px;
   width: 150px;
@@ -112,7 +112,22 @@ footer {
 }
 .navbar__submenu {
   position: absolute;
+  width: 100%;
+  left: 0;
+  /* border: 1px solid #000; */
+  top: 100%;
+  display: flex;
+  /* height: 10px; */
   background: var(--secondary-color);
+}
+.navbar__submenu:nth-child(3) {
+  border: 1px solid #000;
+}
+.navbar__submenu a {
+  width: 100%;
+  height: 50px;
+  text-align: center;
+  line-height: 50px;
 }
 .navbar__submenu > a:hover {
   background: var(--primary-color);
@@ -384,6 +399,7 @@ footer ul li {
 }
 .footer__news button {
   margin-left: -5px;
+  padding: var(--margin-0-5);
   height: 30px;
   font-size: 0.8rem;
   vertical-align: bottom;
@@ -394,7 +410,6 @@ footer ul li {
 }
 .footer__icon_items a {
   transition: .3s;
-  
 }
 .footer__icon_items a:nth-child(1):hover {
   color: #1877F2;
