--- a/1. Daegu-marathon/css/style.css
+++ b/1. Daegu-marathon/css/style.css
@@ -131,6 +131,10 @@ button {
 .flex {
     display: flex;
 }
+.main-inner {
+    width: 1500px;
+    margin: 0 auto;
+}
 
 /* ========================= header ========================= */
 #header {
@@ -198,14 +202,14 @@ button {
     background: var(--primary-color-lighter);
 }
 
-/* ========================= banner ========================= */
+/* ========================= banner section ========================= */
 .banner {
     background: url(../img/main-banner.jpg) center/100% no-repeat;
     width: 100%;
     height: 100vh;
     position: relative;
 }
-/* ========================= home ========================= */
+/* ========================= home section ========================= */
 .home {
     /* margin-top: var(--mb-2); */
     color: var(--white-color);
@@ -230,7 +234,7 @@ button {
     width: 50%;
     text-align: center;
 }
-/* ========================= apply box ========================= */
+/* ========================= apply section ========================= */
 .apply {
     justify-content: space-between;
 }
@@ -282,6 +286,7 @@ button {
     background: var(--primary-color-lighter);
 }
 
+/* =========================  section  ========================= */
 
 
 /* ========================= footer ========================= */
