--- a/1. Daegu-marathon/css/style.css
+++ b/1. Daegu-marathon/css/style.css
@@ -53,12 +53,6 @@
     --z-modal: 1000;
 }
 
-/* ----------------------- dark-theme ----------------------- */
-body.dark-theme {
-    --black-color: hsl(var(--hue-color), 8%, 95%); /* 흰색으로 바뀝니다 */
-    --body-color: hsl(var(--hue-color), 28%, 12%); /* 어두운 색으로 바뀝니다 */
-}
-
 /* ----------------------- reset ----------------------- */
 * {
     box-sizing: border-box;
@@ -132,11 +126,20 @@ button {
     display: flex;
 }
 .main-inner {
-    width: 1500px;
+    width: 100%;
+    padding: 3rem 0 5rem;
     margin: 0 auto;
+}
+.main-title {
+    margin-bottom: var(--mb-3);
+    text-align: center;
+    font-size: var(--big-font-size);
 }
 
 /* ========================= header ========================= */
+.wrap {
+    background: var(--black-color);
+}
 #header {
     position: fixed;
     left: 0;
@@ -286,12 +289,18 @@ button {
     background: var(--primary-color-lighter);
 }
 
-/* =========================  section  ========================= */
-
-
+/* ========================= map section ========================= */
+.map h2 {
+    color: var(--white-color);
+}
+.map img {
+    padding: 0 60px;
+}
 /* ========================= footer ========================= */
 .footer {
-    border-top: 1px solid var(--gray-color);
+    background: var(--primary-color-lighter);
+    color: var(--black-color);
+    /* border-top: 1px solid var(--gray-color); */
     padding: var(--mb-1-5) var(--mb-3);
     font-family: sans-serif;
     font-size: var(--small-font-size);
