--- a/1. Daegu-marathon/css/style.css
+++ b/1. Daegu-marathon/css/style.css
@@ -106,6 +106,9 @@ button {
     color: var(--gray-color);
     margin-bottom: var(--mb-3);
 }
+.header__bg_color {
+    background: var(--primary-color);
+}
 /* .button {
     display: inline-block;
     background-color: var(--primary-color);
@@ -134,6 +137,16 @@ button {
     margin-bottom: var(--mb-3);
     text-align: center;
     font-size: var(--big-font-size);
+}
+.main-title-mt {
+    margin-top: var(--mb-2);
+}
+.margin__l {
+    margin-left: var(--mb-1);
+}
+.section__margin {
+    margin-right: 0 auto;
+    padding: 5rem 5rem;
 }
 
 /* ========================= header ========================= */
