--- a/1. Daegu-marathon/css/style.css
+++ b/1. Daegu-marathon/css/style.css
@@ -252,7 +252,7 @@ button {
 }
 /* ========================= apply section ========================= */
 .apply {
-    justify-content: space-between;
+    justify-content: space-around;
 }
 .apply__box {
     margin: var(--mb-2-5);
@@ -307,7 +307,7 @@ button {
     color: var(--white-color);
 }
 .map img {
-    padding: 0 60px;
+    
 }
 /* ========================= footer ========================= */
 .footer {
