--- a/3. BALENCIAGA/css/style.css
+++ b/3. BALENCIAGA/css/style.css
@@ -16,6 +16,8 @@
   --margin-1: 1rem;
   --margin-1-5: 1.5rem;
   --margin-2: 2rem;
+  --margin-2-5: 2.5rem;
+  --margin-3: 3rem;
 }
 * {
   margin: 0;
@@ -77,6 +79,11 @@ footer {
   background: var(--primary-color);
   color: var(--secondary-color);
   margin-top: 30px;
+}
+.main_title_style {
+  text-align: center;
+  font-size: 2rem;
+  margin-bottom: var(--margin-3);
 }
 
 /* =================== header =================== */
@@ -194,11 +201,6 @@ footer {
 .community {
   margin: 0 auto;
   padding: 60px;
-}
-.community > h1 {
-  text-align: center;
-  font-size: 2rem;
-  margin-bottom: var(--margin-2);
 }
 .community__box {
   width: 1300px;
