--- a/2. SNUH/css/style.css
+++ b/2. SNUH/css/style.css
@@ -1,5 +1,24 @@
 @charset "utf-8";
 /* =================== reset, base =================== */
+:root {
+    --primary-color: #0e1111;
+    --secondary-color: #ffffff;
+    --hover-color: #7c7c7c;
+    --hover-background-color: #0e1111;
+    --line-color: #dddddd;
+    /* z-index */
+    --zindex-header: 100;
+    --zindex-gnb: 200;
+    --zindex-toggle: 300;
+    --zindex-dimmed: 99;
+    /* margin */
+    --margin-0-5: 0.5rem;
+    --margin-1: 1rem;
+    --margin-1-5: 1.5rem;
+    --margin-2: 2rem;
+    --margin-2-5: 2.5rem;
+    --margin-3: 3rem;
+}
 * {
     margin: 0;
     padding: 0;
@@ -25,6 +44,24 @@ a {
     text-decoration: none;
     display: block;
 }
+/* =================== common =================== */
+.flex-center {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    text-align: center;
+  }
+  .flex {
+    display: flex;
+  }
+  i {
+    font-size: 2rem;
+    vertical-align: baseline;
+  }
+  .li-box-style {
+    border: 1px solid var(--line-color);
+    border-radius: 10px;
+  }
 /* =================== layout =================== */
 .inner {
     position: relative;
@@ -32,9 +69,6 @@ a {
     height: 100vh;
     margin: 0 auto;
     padding: 0 10px;
-}
-header {
-    
 }
 .header_top {
     width: 100%;
@@ -74,4 +108,19 @@ footer {
     width: 100%;
     height: 137px;
     background: #31354e;
+}
+/* ================ header ================ */
+header {
+    margin-top: var(--margin-2);
+}
+.header__logo {
+    flex: 8;
+}
+.header__login {
+    flex: 2;
+    border: 1px solid #000;
+    /* margin-top: var(--margin-2); */
+    text-align: center;
+    align-items: center;
+    justify-content: space-between;
 }
