--- a/1. Daegu-marathon/css/style.css
+++ b/1. Daegu-marathon/css/style.css
@@ -202,7 +202,7 @@ button {
     color: var(--white-color);
 }
 .nav__item a:hover{
-    color: var(--primary-color);
+    color: black;
 }
 .nav__item a:hover.active {
     color: var(--white-color);
