--- a/beommul_cathedral/css/style.css
+++ b/beommul_cathedral/css/style.css
@@ -12,15 +12,16 @@
     saturation(채도) : 0 ~ 100 (0: 회색, 100: 원색)
     lightness(명도) : 0 ~ 100 (0: 검정색, 50: 중간, 100: 흰색)
 */
-    --hue-color: 205;
+    /* --hue-color: 205; */
 
 /* ----------------------- colors ----------------------- */
     --primary-color: hsl(var(--hue-color), 69%, 61%);
     --primary-color-lighter: hsl(var(--hue-color), 92%, 85%);
 
-    --black-color: hsl(var(--hue-color), 8%, 15%);
+    --black-color: #101010;
     --gray-color: hsl(var(--hue-color), 8%, 45%);
     --white-color: #FFF;
+    --hover-color: #00376E;
     --body-color: hsl(var(--hue-color), 60%, 99%);
 
 /* ----------------------- typography ----------------------- */
@@ -133,27 +134,8 @@ button {
     padding: 3rem 0 5rem;
     margin: 0 auto;
 }
-.main-title {
-    margin-bottom: var(--mb-3);
-    text-align: center;
-    font-size: var(--big-font-size);
-}
-.main-title-mt {
-    margin-top: var(--mb-2);
-}
-.margin__l {
-    margin-left: var(--mb-1);
-}
-.section__margin {
-    margin-right: 0 auto;
-    padding: 5rem 5rem;
-}
-
 /* ========================= header ========================= */
-.wrap {
-    background: var(--black-color);
-}
-#header {
+/* #header {
     position: fixed;
     left: 0;
     top: 0;
@@ -171,11 +153,13 @@ button {
     color: #000;
     background: var(--primary-color);
     border: none;
+    background: var(--white-color);
 }
 .nav__item > a.fixed {
-    color: var(--black-color);
+    color: var(--white-color);
 }
 .header-inner {
+    background: var(--white-color);
     max-width: 100%;
     height: 4rem;
     padding: 0 2rem;
@@ -190,7 +174,7 @@ button {
     justify-content: space-between;
 }
 .nav__link {
-    color: var(--white-color);
+    color: var(--black-color);
 }
 .nav__item a {
     width: 100%;
@@ -199,125 +183,80 @@ button {
     transition: .4s;
 }
 .nav__item > a {
-    color: var(--white-color);
+    color: var(--black-color);
+    font-weight: var(--font-semi-bold);
 }
 .nav__item a:hover{
-    color: black;
+    color: var(--hover-color);
 }
 .nav__item a:hover.active {
     color: var(--white-color);
 }
 .nav__submenu {
     position: absolute;
+    border: 1px solid #000;
+    background: #000000ad;
     top: 100%;
     left: 0;
     width: 100%;
+    height: 400px;
     display: flex;
+    color: var(--white-color);
     font-size: var(--font-medium);
-    /* font-weight: var(--font-semi-bold); */
-    background: var(--primary-color-lighter);
-}
+    font-weight: var(--font-semi-bold);
+    /* background: var(--primary-color-lighter); }*/
 
-/* ========================= banner section ========================= */
-.banner {
-    background: url(../img/main-banner.jpg) center/100% no-repeat;
+/* nav full dropdown menu */
+header {
     width: 100%;
-    height: 100vh;
-    position: relative;
 }
-/* ========================= home section ========================= */
-.home {
-    /* margin-top: var(--mb-2); */
-    color: var(--white-color);
+.nav__container {
+    background: red;
+    height: 60px;
+    line-height: 60px;
 }
-.home__container {
-    position: absolute;
-    top: 50%;
-    transform: translateY(-20%);
-    margin: var(--mb-2);
-    font-size: var(--big-font-size);
-    font-weight: var(--font-medium);
-    width: 50%;
-}
-.home__container_desc {
-    margin-bottom: var(--mb-1);
-    color: var(--white-color);
-}
-.home__container_date {
-    color: var(--white-color);
-    background: var(--primary-color-lighter);
-    border-radius: var(--mb-0-5);
-    width: 50%;
-    text-align: center;
-}
-/* ========================= apply section ========================= */
-.apply {
-    justify-content: space-around;
-}
-.apply__box {
-    margin: var(--mb-2-5);
-    position: relative;
+.nav__container ul {
     overflow: hidden;
+    width: 960px;
+    margin: 0 auto;
 }
-.apply__img {
-    transition: .4s;
+.nav__container ul li {
+    width: 192px;
+    /* display: flex; */
+    float: left;
 }
-.apply__box:hover .apply__img {
-    transform: scale(1.2);
+.nav__container ul li a {
+    color: var(--hover-color);
+    font-size: 20px;
+    font-weight: bold;
 }
-.apply__desc {
-    text-align: center;
-    position: absolute;
-    top: 50%;
-    left: 50%;
-    transform: translate(-50%, -50%);
+.nav__submenu {
     width: 100%;
-    color: var(--white-color);
-
+    position: absolute;
+    top: 60px;
+    left: 0;
+    right: 0;
+    background: rgba(0,0,0,.8);
 }
-.apply__desc p {
-    font-size: var(--big-font-size);
-    margin-bottom: var(--mb-2);
+.nav__submenu_container {
+    overflow: hidden;
+    width: 960px;
+    margin: 0 auto;
+    padding: 2rem 0;
 }
-.apply__desc a {
-    font-size: var(--h3-font-size);
-    border: 1px solid var(--white-color);
-    padding: var(--mb-0-5);
-    transition: .4s;
+.nav__subitem {
+    width: 192px;
+    float: left;
 }
-.apply__desc a:hover {
-    background: var(--white-color);
-    color: var(--black-color);
-    border: none;
+.nav__subitem li {
+    padding-bottom: 10px;
 }
-.apply__semi_blue {
-    color: var(--primary-color-lighter);
-}
-.apply__semi_blue a {
-    border: 1px solid var(--primary-color-lighter);
-}
-.apply__semi_blue a:hover {
-    border: none;
-    color: var(--white-color);
-    background: var(--primary-color-lighter);
+.nav__subitem li a {
+    color: #777;
+    font-size: 15px;
 }
 
-/* ========================= map section ========================= */
-.map h2 {
-    color: var(--white-color);
-}
-/* ========================= footer ========================= */
-.footer {
-    background: var(--primary-color-lighter);
-    color: var(--black-color);
-    /* border-top: 1px solid var(--gray-color); */
-    padding: var(--mb-1-5) var(--mb-3);
-    font-family: sans-serif;
-    font-size: var(--small-font-size);
-}
-address {
-    font-style: unset;
-}
-address a {
-    text-decoration: underline;
-}
+
+
+
+
